Revise service section layout and content
Updated the service section with new service cards and improved layout.

--- a/service.html
+++ b/service.html
@@ -41,34 +41,43 @@
   </div>
 </header>
 
-<!-- SERVICES HERO -->
-<section class="py-24 max-w-6xl mx-auto px-6 text-center">
-  <h1 class="text-5xl font-bold mb-4 text-pink-500">Pamper Yourself at Bubbles Nail Spa</h1>
-  <p class="text-gray-600 mb-16 text-lg">Experience luxurious nail & spa treatments that relax, rejuvenate, and beautify. Our signature services are designed to leave you feeling fabulous.</p>
+<!-- SERVICES SECTION -->
+<section id="services" class="py-20 bg-gray-50">
+  <div class="max-w-6xl mx-auto px-6 text-center">
+    <h2 class="text-3xl md:text-4xl font-bold mb-12">Our Signature Services</h2>
 
-  <!-- Service Cards -->
-  <div class="grid md:grid-cols-3 gap-10">
-    <div class="bg-white shadow-lg p-8 rounded-xl hover:scale-105 transform transition flex flex-col items-center text-center">
-      <img src="gel-manicure-icon.png" alt="Gel Manicure" class="w-16 h-16 mb-4">
-      <h3 class="text-2xl font-bold mb-2">Gel Manicure</h3>
-      <p class="text-gray-600 mb-4">Long-lasting shine without damaging your nails. Perfect for special occasions!</p>
-      <a href="contact.html" class="text-pink-500 font-semibold hover:underline">Book Now</a>
-    </div>
+    <!-- Service Cards Grid -->
+    <div class="grid md:grid-cols-3 gap-10">
+      
+      <!-- Service 1 -->
+      <div class="service-card bg-white shadow-lg p-8 rounded-xl hover:shadow-2xl hover:scale-105 transform transition flex flex-col items-center text-center">
+        <img src="gelmanicure.jpg" alt="Gel Manicure" class="w-32 h-32 mb-4 object-cover rounded-lg hover:scale-110 transition-transform duration-300">
+        <h3 class="text-2xl font-bold mb-2">Gel Manicure</h3>
+        <p class="text-gray-600 mb-4">Long-lasting shine without damaging your nails. Perfect for special occasions!</p>
+        <a href="contact.html" class="text-pink-500 font-semibold hover:underline">Book Now</a>
+      </div>
 
-    <div class="bg-white shadow-lg p-8 rounded-xl hover:scale-105 transform transition flex flex-col items-center text-center">
-      <img src="spa-pedicure-icon.png" alt="Luxury Spa Pedicure" class="w-16 h-16 mb-4">
-      <h3 class="text-2xl font-bold mb-2">Luxury Spa Pedicure</h3>
-      <p class="text-gray-600 mb-4">Relax, detox & renew your feet with our pampering pedicure treatments.</p>
-      <a href="contact.html" class="text-pink-500 font-semibold hover:underline">Book Now</a>
-    </div>
+      <!-- Service 2 -->
+      <div class="service-card bg-white shadow-lg p-8 rounded-xl hover:shadow-2xl hover:scale-105 transform transition flex flex-col items-center text-center">
+        <img src="predicure.jpg" alt="Luxury Spa Pedicure" class="w-32 h-32 mb-4 object-cover rounded-lg hover:scale-110 transition-transform duration-300">
+        <h3 class="text-2xl font-bold mb-2">Luxury Spa Pedicure</h3>
+        <p class="text-gray-600 mb-4">Relax, detox & renew your feet with our pampering pedicure treatments.</p>
+        <a href="contact.html" class="text-pink-500 font-semibold hover:underline">Book Now</a>
+      </div>
 
-    <div class="bg-white shadow-lg p-8 rounded-xl hover:scale-105 transform transition flex flex-col items-center text-center">
-      <img src="nail-art-icon.png" alt="Nail Art & Extensions" class="w-16 h-16 mb-4">
-      <h3 class="text-2xl font-bold mb-2">Nail Art & Extensions</h3>
-      <p class="text-gray-600 mb-4">Elegant designs tailored to your style for that perfect finishing touch.</p>
-      <a href="contact.html" class="text-pink-500 font-semibold hover:underline">Book Now</a>
+      <!-- Service 3 -->
+      <div class="service-card bg-white shadow-lg p-8 rounded-xl hover:shadow-2xl hover:scale-105 transform transition flex flex-col items-center text-center">
+        <img src="nailart.jpg" alt="Nail Art & Extensions" class="w-32 h-32 mb-4 object-cover rounded-lg hover:scale-110 transition-transform duration-300">
+        <h3 class="text-2xl font-bold mb-2">Nail Art & Extensions</h3>
+        <p class="text-gray-600 mb-4">Elegant designs tailored to your style for that perfect finishing touch.</p>
+        <a href="contact.html" class="text-pink-500 font-semibold hover:underline">Book Now</a>
+      </div>
+
     </div>
   </div>
+</section>
+
+
 
   <!-- Call to Action -->
   <div class="text-center mt-20">
@@ -124,3 +133,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
