Fix HTML encoding issues in reviews.html

--- a/reviews.html
+++ b/reviews.html
@@ -17,7 +17,7 @@
     <!-- Desktop nav -->
     <nav class="hidden md:flex gap-6 text-sm font-medium">
       <a href="index.html" class="hover:text-pink-500">Home</a>
-      <a href="services.html" class="hover:text-pink-500">Services</a>
+      <a href="service.html" class="hover:text-pink-500">Services</a>
       <a href="about.html" class="hover:text-pink-500">About</a>
       <a href="reviews.html" class="text-pink-500 font-semibold">Reviews</a>
       <a href="contact.html" class="bg-pink-500 text-white px-4 py-2 rounded-full">Book Now</a>
@@ -34,7 +34,7 @@
   <!-- Mobile menu -->
   <div id="menu" class="hidden md:hidden bg-white border-t border-gray-200 overflow-hidden transition-all duration-300 max-h-0">
     <a href="index.html" class="block px-6 py-3 border-b hover:bg-pink-50">Home</a>
-    <a href="services.html" class="block px-6 py-3 border-b hover:bg-pink-50">Services</a>
+    <a href="service.html" class="block px-6 py-3 border-b hover:bg-pink-50">Services</a>
     <a href="about.html" class="block px-6 py-3 border-b hover:bg-pink-50">About</a>
     <a href="reviews.html" class="block px-6 py-3 border-b bg-pink-50 font-semibold">Reviews</a>
     <a href="contact.html" class="block px-6 py-3 bg-pink-500 text-white text-center rounded-b">Book Now</a>
@@ -153,3 +153,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
